# spotipypeline

./: LICENSE  README.md  pyproject.toml
data/: raw_data_0.json  raw_data_3.json  raw_data_4.json  raw_data_5.json
