[tool.poetry]
name = "spotipypeline"
version = "0.1.0"
description = ""
authors = ["kostas-rigan <t8200145@aueb.gr>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
pyarrow = "^19.0.1"
sqlalchemy = "^2.0.38"
jupyter = "^1.1.1"
prefect = "^3.2.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
